<resources>
    <string name="app_name">八闽票务</string>
    <string name="title_bar_search">八闽票务</string>
    <string name="set_out">出发</string>
    <string name="arrive">到达</string>
    <string name="set_out_time">出发时间</string>
    <string name="search">查询</string>
    <string name="search_hint">请输入到达站点/支持字母首拼音检索</string>

    <string name="order_success_title">支付成功</string>
    <string name="order_success">您的车票信息已提交，后台出票中…\n稍候可到订单列表查看详情</string>

    <string name="order_failure_title">支付失败</string>
    <string name="order_failure">亲，非常抱歉!因网络问题或其它因素造成了订单支付异常，\n给您造成了不便，敬请详解，若有其它问题，请拨打我们的\n客服电话:400-0593-330！</string>

    <string name="order_cancel_title">撤销支付</string>
    <string name="order_cancel">您主动取消了微信支付，订单将为您保留十分钟…\n若还需购买此车票请到订单列表查看，并及时支付！</string>


    <string name="title_bar_ticket">票务查询</string>
    <string name="title_activity_sms_login">SmsLoginActivity</string>
    <string name="title_activity_fillin_order">FillinOrderActivity</string>
    <string name="title_bar_fillin_order">填写订单</string>
    <string name="title_activity_add_fetcher">AddFetcherActivity</string>
    <string name="title_bar_add_fetcher">添加乘客</string>
    <string name="title_activity_used_contact">UsedContact</string>
    <string name="title_activity_ticket_notice">TicketNotice</string>
    <string name="title_activity_soft_info">SoftInfo</string>
    <string name="title_activity_select_station_arrive">SelectStationArriveActivity</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_order_deatil">OrderDeatilActivity</string>
    <string name="title_activity_coupon_info">CouponInfoActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
