<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/frag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragment.Fragment01">

    <LinearLayout
        android:id="@+id/ll_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/title_bar_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:text="@string/title_bar_search"/>

            <ImageView
                android:id="@+id/iv_cliscan"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/scan"/>

        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rela_viewpager"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@+id/ll_title_bar">

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_headerview_pager"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            ></android.support.v4.view.ViewPager>

        <bamin.com.kepiao.customView.ViewPagerIndicator
            android:id="@+id/ViewPagerIndicator"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            app:indicatorCount="3"
            app:layout_position="middle"
            app:radiusSize="5dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rela_viewpager"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_cardview"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:src="@mipmap/ic_exchange"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_choose_set_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_out"
                    android:textSize="@dimen/normalTextSize"/>

                <TextView
                    android:id="@+id/tv_set_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:padding="6dp"
                    android:text="@string/choose_point_start"
                    android:textSize="@dimen/myPagerTextSize"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_arrow_right"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:background="#C0C0C0"></TextView>

            <LinearLayout
                android:id="@+id/ll_choose_arrive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrive"
                    android:textSize="@dimen/normalTextSize"/>

                <TextView
                    android:id="@+id/tv_arrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:padding="6dp"
                    android:text="@string/choose_point_end"
                    android:textSize="@dimen/myPagerTextSize"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_arrow_right"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_choose"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_line"/>

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/bg_cardview"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:src="@mipmap/ic_home_calendar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_out_time"
            android:textSize="@dimen/normalTextSize"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="6dp"
            android:text="01月17日（明天）"
            android:textSize="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_time"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_select"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="@dimen/normalTextSize"/>

</RelativeLayout>
